# vidralo

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  setup_dev_binaries.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  update-homebrew-tap.yml
extension/: background.js  manifest.json
homebrew-tap/: README.md
homebrew-tap/Casks/: vidralo.rb
src/: App.css  App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  downloader.rs  lib.rs  main.rs  transcribe.rs  updater.rs
